v9.0.0/_sources/generated/pcdsdevices.sample_delivery.Selector.rst.txt
pcdsdevices.sample\_delivery.Selector
=====================================

.. currentmodule:: pcdsdevices.sample_delivery

.. autoclass:: Selector

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - status
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:IO:SyncUnitOK``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.sample_delivery.M3BasePLCDevice`
    
        * - sampleFM
          - :class:`~pcdsdevices.sample_delivery.Sensirion`
          - ``:SampleFM``
          - 
          - normal
          - 
    
        * - sheathFM
          - :class:`~pcdsdevices.sample_delivery.Sensirion`
          - ``:SheathFM``
          - 
          - normal
          - 
    
        * - shaker1
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:Shaker:01:Ctrl``
          - 
          - normal
          - 
    
        * - shaker2
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:Shaker:02:Ctrl``
          - 
          - normal
          - 
    
        * - shaker3
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:Shaker:03:Ctrl``
          - 
          - normal
          - 
    
        * - shaker4
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:Shaker:04:Ctrl``
          - 
          - normal
          - 
    
        * - valve1
          - :class:`~pcdsdevices.sample_delivery.ViciValve`
          - ``:Valve:01``
          - 
          - normal
          - 
    
        * - valve2
          - :class:`~pcdsdevices.sample_delivery.ViciValve`
          - ``:Valve:02``
          - 
          - normal
          - 
    
        * - lock
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ValvesLockRequest``
          - 
          - normal
          - 
    
        * - unlock
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ValvesUnlockRequest``
          - 
          - normal
          - 
    
        * - locked
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ValvesLocked``
          - 
          - normal
          - 
    
        * - synced
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ValvesSynced``
          - 
          - normal
          - 
    
        * - sync_req_pos
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ValveSyncReqPos``
          - 
          - normal
          - 
    
        * - sync_curr_pos
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ValveSyncCurrentPos``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set_defaults
    .. automethod:: stage_group_instances
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: subscriptions
    
    